# badsnakes

./: MANIFEST.in  NOTES  README.md  build.sh  pyproject.toml  requirements.txt
badsnakes/: __init__.py  badsnakes.py
badsnakes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
badsnakes/libs/: argparser.py  collector.py  containers.py  enums.py  logger.py  module.py  parser.py  reporter.py  utilities.py
docs/source/: analysers.rst  badsnakes.rst  changelog.rst  collector.rst  conf.py  config.rst  containers.rst  docdemos.py  enums.rst  extractor.rst  index.rst  library.rst  logger.rst  module.rst  parser.rst  reporter.rst  spelling_wordlist.txt  utilities.rst
meta/research/: NOTES  README  Research.ipynb  zipsamples.sh
meta/research/scripts/: analyse.py
pylintr/: pylintr.sh
pylintr/results/: badsnakes_badsnakes.plr  libs_analysers.plr  libs_argparser.plr  libs_collector.plr  libs_config.plr  libs_containers.plr  libs_enums.plr  libs_extractor.plr  libs_logger.plr  libs_module.plr  libs_parser.plr  libs_reporter.plr  libs_utilities.plr  summary.plr
